[tool.poetry]
name = "haysyn"
version = "0.1.0"
description = "Anon takes"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standart"], version = "^0.35.0"}
jinja2 = "^3.1.6"
sqlalchemy = "^2.0.41"
pydantic-settings = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
