[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["cheapdramas <bileckijrostislav46@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.22.0"
dotenv = "^0.9.9"
pyjwt = "^2.10.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
aiosqlite = "^0.21.0"
redis = "^6.4.0"
pydub = "^0.25.1"


[tool.poetry.group.dev.dependencies]
python-lsp-server = {extras = ["all"], version = "^1.14.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
