[tool.poetry]
name = "website"
version = "0.1.0"
description = "Hueviy Haysyn Website"
authors = ["cheapdramas <bileckijrostislav46@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
dotenv = "^0.9.9"
jinja2 = "^3.1.6"
sqlalchemy = "^2.0.43"
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
