[tool.poetry]
name = "website"
version = "0.1.0"
description = "Hueviy Haysyn Website"
authors = ["cheapdramas <bileckijrostislav46@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
dotenv = "^0.9.9"
jinja2 = "^3.1.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
uvicorn = "^0.35.0"
aiohttp = "^3.12.15"
pyjwt = "^2.10.1"
snowflake-id = "^1.0.2"
redis = "^6.4.0"
websockets = "^15.0.1"
aiosqlite = "^0.21.0"


[tool.poetry.group.dev.dependencies]
faker = "^37.8.0"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
